--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,90 @@
-version: '3.1'
+version: '3.9'
 
 networks:
   product-network:
 
+volumes:
+  pgdata:
+
 services:
   db:
     image: postgres:14.6-alpine
-    container_name: db
+    container_name: diplom_db
     environment:
       POSTGRES_PASSWORD: ${PG_PASSWORD}
       POSTGRES_USER: ${PG_USER}
       POSTGRES_DB: ${PG_DB}
     ports:
       - "5435:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${PG_USER} -d ${PG_DB}" ]
+      interval: 10s
+      timeout: 15s
+      retries: 5
+      start_period: 10s
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - ./logs:/var/diplom_log
+    env_file:
+      - ./.env.prod
     networks:
       product-network:
         aliases:
           - ${PG_HOST}
+
+  shops:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: diplom_shops
+    ports:
+      - "8001:8001"
+    networks:
+      product-network:
+    depends_on:
+      - db
+    env_file:
+      - ./.env.prod
+    volumes:
+      - ./backend/:/backend
+      - ./netology_pd_diplom/:/netology_pd_diplom
+
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile.tests
+    container_name: diplom_tests
+    networks:
+      product-network:
+    depends_on:
+      - db
+      - shops
+    env_file:
+      - ./.env.prod
+
+
+
+#    environment:
+#      PG_USER: ${PG_USER}
+#      PG_PASSWORD: ${PG_PASSWORD}
+#      PG_HOST: ${PG_HOST}
+#      PG_PORT: ${PG_PORT}
+#      PG_DB: ${PG_DB}
+#      API_URL: ${API_URL}
+#      DEBUG: ${DEBUG}
+#      ALLOWED_HOSTS: ${ALLOWED_HOSTS}
+#      SECRET_KEY: ${SECRET_KEY}
+#      EMAIL_USER: ${EMAIL_USER}
+#      PASSWORD_USER1: ${PASSWORD_USER1}
+#      PASSWORD_USER2: ${PASSWORD_USER2}
+#      FIRST_NAME: ${FIRST_NAME}
+#      LAST_NAME: ${LAST_NAME}
+#      SUR_NAME: ${SUR_NAME}
+#      COMPANY: ${COMPANY}
+#      POSITION: ${POSITION}
+#      EMAIL_HOST: ${EMAIL_HOST}
+#      EMAIL_HOST_USER: ${EMAIL_HOST_USER}
+#      EMAIL_HOST_PASSWORD: ${EMAIL_HOST_PASSWORD}
+#      EMAIL_PORT: ${EMAIL_PORT}
+#      EMAIL_USE_SSL: ${EMAIL_USE_SSL}
+
