--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@ tests/partners/
 tests/shops
 tests/users
 aaa.py
-reference/*
+reference/
 .env.prod
+static/
+swagger.yaml
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -111,3 +113,4 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+/reference/
