--- a/Dockerfile.celery
+++ b/Dockerfile.celery
@@ -2,23 +2,20 @@ FROM python:3.10
 
 RUN apt update && apt install -y curl
 
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHON UNBUFFERED=1
+
 COPY ./requirements.txt /home/
 RUN pip3 install --no-cache-dir --upgrade -r /home/requirements.txt
 
 COPY ./backend /home/backend
 COPY ./netology_pd_diplom /home/netology_pd_diplom
-ADD ./manage.py /home/
 ADD ./config.py /home/
-ADD ./run.sh /home/
 
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
 
-EXPOSE 8001
+WORKDIR /home
 
-WORKDIR /home/
+RUN chmod +x /home/netology_pd_diplom/run_celery.sh
 
-RUN chmod +x /home/run.sh
-
-ENTRYPOINT ["/home/run.sh"]
-# CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+ENTRYPOINT ["/home/netology_pd_diplom/run_celery.sh"]
+# CMD celery -A backends worker info
