--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,32 @@ services:
       - ./backend/:/backend
       - ./netology_pd_diplom/:/netology_pd_diplom
 
+  redis:
+    image: redis:7.0.0-alpine3.15
+    container_name: diplom_redis
+    ports:
+      - "6379:6379"
+    depends_on:
+      - db
+    networks:
+      product-network:
+        aliases:
+          - ${PG_HOST}
+
+  celery:
+      container_name: diplom_celery
+#      restart: always
+      build:
+        context: .
+        dockerfile: Dockerfile.celery
+      depends_on:
+        - db
+        - redis
+      networks:
+        product-network:
+      env_file:
+        - ./.env.prod
+
   tests:
     build:
       context: .
@@ -59,6 +85,7 @@ services:
     depends_on:
       - db
       - shops
+      - redis
     env_file:
       - ./.env.prod
 
