--- a/.env.dev
+++ b/.env.dev
@@ -1,22 +1,34 @@
 PG_USER=
 PG_PASSWORD=
-PG_HOST=db
+#PG_HOST=db
+PG_HOST=127.0.0.1
 PG_PORT=5432
 PG_DB=diplom_db
-API_URL=http://127.0.0.1:8000/api/v1
+API_URL=http://127.0.0.1:8001/api/v1
 DEBUG=False
 ALLOWED_HOSTS=*
-SECRET_KEY=
-EMAIL_USER=test_root@admin.ru
-PASSWORD_USER1=supersecret23
-PASSWORD_USER2=supersecret23
-FIRST_NAME=name-first
-LAST_NAME=last
-SUR_NAME=surname
-COMPANY=netology
-POSITION=student
+SECRET_KEY=dddk3ghg1hr3ke@kfl3j3afk23485968456bj3vbj5460mv
 EMAIL_HOST=
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 EMAIL_PORT=465
 EMAIL_USE_SSL=True
+
+EMAIL_USER=test_root@admin.ru
+PASSWORD_USER1=supersecret
+PASSWORD_USER2=supersecret
+FIRST_NAME=name-first
+LAST_NAME=last
+SUR_NAME=surname
+COMPANY=netology
+POSITION=student
+
+CITY='Moscow'
+STREET='Tverskaya'
+HOUSE='13'
+STRUCTURE='A'
+BUILDING=''
+APARTMENT='100'
+PHONE='777-777-777'
+
+URL='https://raw.githubusercontent.com/netology-code/pd-diplom/master/data/shop1.yaml'
