--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,18 @@ services:
       POSTGRES_USER: ${PG_USER}
       POSTGRES_DB: ${PG_DB}
     ports:
-      - "5435:5432"
+      - "5432:5432"
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U ${PG_USER} -d ${PG_DB}" ]
       interval: 10s
       timeout: 15s
       retries: 5
       start_period: 10s
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./logs:/var/diplom_log
@@ -43,7 +48,6 @@ services:
       product-network:
     depends_on:
       - db
-      - celery
     env_file:
       - ./.env
     volumes:
@@ -53,21 +57,19 @@ services:
   redis:
     image: redis:7.0.0-alpine3.15
     container_name: diplom_redis
-    ports:
-      - "6379:6379"
-    depends_on:
-      - db
+    expose:
+      - 6379
     networks:
       product-network:
-        aliases:
-          - ${PG_HOST}
 
   celery:
+#      image: celery:4.0
       container_name: diplom_celery
-#      restart: always
+      restart: always
       build:
         context: .
         dockerfile: Dockerfile.celery
+      command: celery -A netology_pd_diplom worker -l info --uid=0
       depends_on:
         - db
         - redis
@@ -89,5 +91,7 @@ services:
       - celery
     env_file:
       - ./.env
+    volumes:
+      - ./tests:/tests
 
 
