--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
   db:
     image: postgres:14.6-alpine
     container_name: diplom_db
+    restart: unless-stopped
     environment:
       POSTGRES_PASSWORD: ${PG_PASSWORD}
       POSTGRES_USER: ${PG_USER}
@@ -34,8 +35,6 @@ services:
       - ./.env
     networks:
       product-network:
-        aliases:
-          - ${PG_HOST}
 
   shops:
     build:
@@ -63,13 +62,11 @@ services:
       product-network:
 
   celery:
-#      image: celery:4.0
       container_name: diplom_celery
       restart: always
       build:
         context: .
         dockerfile: Dockerfile.celery
-      command: celery -A netology_pd_diplom worker -l info --uid=0
       depends_on:
         - db
         - redis
