--- a/.env.dev
+++ b/.env.dev
@@ -1,7 +1,7 @@
 PG_USER=
 PG_PASSWORD=
-#PG_HOST=db
-PG_HOST=127.0.0.1
+PG_HOST=db
+#PG_HOST=127.0.0.1
 PG_PORT=5432
 PG_DB=diplom_db
 API_URL=http://127.0.0.1:8001/api/v1
