--- a/Dockerfile.tests
+++ b/Dockerfile.tests
@@ -19,4 +19,8 @@ WORKDIR /home
 
 RUN chmod +x /home/tests/run_coverage.sh
 
-ENTRYPOINT ["/home/tests/run_coverage.sh"]
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.7.3/wait /wait
+RUN chmod +x /wait
+
+ENTRYPOINT /wait && bash /home/tests/run_coverage.sh
+
