--- a/.env.dev
+++ b/.env.dev
@@ -4,10 +4,12 @@ PG_HOST=db
 #PG_HOST=127.0.0.1
 PG_PORT=5432
 PG_DB=diplom_db
-API_URL=http://127.0.0.1:8001/api/v1
 DEBUG=False
 ALLOWED_HOSTS=*
 SECRET_KEY=dddk3ghg1hr3ke@kfl3j3afk23485968456bj3vbj5460mv
+
+DJANGO_SUPERUSER_PASSWORD=
+
 EMAIL_HOST=
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
