--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       - ./.env
     networks:
       product-network:
+#        aliases:
+#            - ${PG_HOST}
 
   shops-app:
     build:
@@ -58,6 +60,8 @@ services:
     container_name: diplom_redis
     expose:
       - 6379
+    ports:
+      - "6379:6379"
     networks:
       product-network:
 
@@ -72,6 +76,8 @@ services:
         - redis
       networks:
         product-network:
+      environment:
+        DEBUG: False
       env_file:
         - ./.env
 
