--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ sqlparse==0.4.3
 ujson==5.7.0
 urllib3==1.26.13
 gunicorn==20.1.0
-drf_yasg
+drf_spectacular==0.25.1
 celery==5.2.7
 redis
 django-allauth
